Finished math plugin
I added comments and sin/tan to it. Also .gitignore was updated, I
didn't notice a dll getting uploaded last time, sorry :(

--- a/cmd3.cbp
+++ b/cmd3.cbp
@@ -29,6 +29,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="LICENSE" />
+		<Unit filename="README.md" />
 		<Unit filename="cmd3.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
