--- a/plugins/cmd3math/cmd3math.cbp
+++ b/plugins/cmd3math/cmd3math.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="cygwin" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/libcmd3math" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/cmd3math" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="cygwin" />
@@ -15,10 +15,11 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="D:/Projects/CMD3" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/libcmd3math" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/cmd3math" prefix_auto="0" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="cygwin" />
@@ -26,6 +27,7 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="D:/Projects/CMD3" />
 				</Compiler>
 			</Target>
 		</Build>
