Removed clear, changed Readme
As prep for a binary release clear was removed (system() doesn't work
under cygwin without /bin/sh functioning)  I also finally wrote up the
readme. I /think/ I have all of the legal stuff sorted out so I can
create a binary release (not that anyone would want this program but
just for practice!)  Ill add clear back in a plugin don't worry!

--- a/cmd3.cbp
+++ b/cmd3.cbp
@@ -30,7 +30,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="LICENSE" />
-		<Unit filename="README.md" />
+		<Unit filename="README" />
 		<Unit filename="cmd3.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
