--- a/cmd3.cbp
+++ b/cmd3.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="readline" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/cmd3" prefix_auto="1" extension_auto="1" />
@@ -21,15 +24,21 @@
 				<Option type="1" />
 				<Option compiler="cygwin" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-Os" />
 				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-static" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="LICENSE" />
+		<Unit filename="LICENSE">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="README" />
 		<Unit filename="cmd3.h" />
 		<Unit filename="main.cpp" />
