--- a/plugins/cmd3std/cmd3std.cbp
+++ b/plugins/cmd3std/cmd3std.cbp
@@ -8,21 +8,28 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/cmd3std" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="./bin/Debug" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
+				<Option host_application="D:/Projects/CMD3/bin/Debug/cmd3.exe" />
+				<Option run_host_application_in_terminal="1" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add directory="D:/Projects/CMD3" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/cmd3std" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="./bin/Release" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
+				<Option host_application="D:/Projects/CMD3/bin/Release/cmd3.exe" />
+				<Option run_host_application_in_terminal="0" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
