--- a/plugins/cmd3math/cmd3math.cbp
+++ b/plugins/cmd3math/cmd3math.cbp
@@ -17,6 +17,9 @@
 					<Add option="-g" />
 					<Add directory="D:/Projects/CMD3" />
 				</Compiler>
+				<Linker>
+					<Add library="gmp" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/cmd3math" prefix_auto="0" extension_auto="1" />
@@ -29,6 +32,9 @@
 					<Add option="-O2" />
 					<Add directory="D:/Projects/CMD3" />
 				</Compiler>
+				<Linker>
+					<Add library="gmp" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
